<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mases">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imagenPrincipal"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrincipal"
            android:layout_gravity="center"
            android:src="@drawable/sistema"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/editId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Escribe tu identificacón"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribetuC"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/MisBotones"
            android:onClick="LoginWebService"
            android:text="@string/entrar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="40dp">

        <TextView
            android:id="@+id/textRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:text="@string/registro"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textOlvidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:text="@string/olvidar"
            android:layout_marginTop="10dp" />

     </LinearLayout>
</LinearLayout>

</ScrollView>