<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mases"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textTituloSugerencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloSugenrecias"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textcontinuar_Sugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuar"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <RadioGroup
                android:id="@+id/radioGroupContinuar_Sugerencias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <RadioButton android:id="@+id/radio_Si_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Si"
                    android:layout_marginTop="5dp" />

                <RadioButton
                    android:id="@+id/radio_No_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:layout_marginTop="5dp"/>
            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/autoCompleteProfesion_Sugerencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/elegirTitulo"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textCalificar_Sugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calificar"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <RadioGroup
                android:id="@+id/radioGroupCalificar_Sugerencias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <RadioButton android:id="@+id/radio_Excelente_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Excelente"
                    android:layout_marginTop="5dp" />

                <RadioButton
                    android:id="@+id/radio_Buena_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buena"
                    android:layout_marginTop="5dp"/>

                <RadioButton
                    android:id="@+id/radio_Regular_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Regular"
                    android:layout_marginTop="5dp"/>

                <RadioButton
                    android:id="@+id/radio_Mala_Sugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mala"
                    android:layout_marginTop="5dp"/>
            </RadioGroup>

            <EditText
                android:id="@+id/editTextObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>

